fix overflow problem

--- a/assets/css/sass/_container.scss
+++ b/assets/css/sass/_container.scss
@@ -3,6 +3,5 @@
 	justify-content: center;
 	align-items: center;
 	flex: 1 1 auto;
-	height: 100vh;
 	position: relative;
 }
