--- a/assets/css/sass/_dashboard.scss
+++ b/assets/css/sass/_dashboard.scss
@@ -23,10 +23,3 @@ $nav-block: calc(100vh/4);
 		}
 	}
 }
-
-
-#about-message {
-	color: $white;
-	position: absolute;
-	animation-duration: 3s;
-}
