--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'hero';
 @import 'dashboard';
 @import 'portfolio';
+@import 'about';
 @import 'container';
 
 body {
@@ -10,14 +11,14 @@ body {
 	font-weight: 300;
 	font-size: 16px;
 	color: $white;
-	height: 100vh;
-	overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
 }
 
 .wrapper {
 	width: 100%;
+	max-height: 100vh;
+	overflow: hidden;
 	display: flex;
 	flex-flow: row nowrap;
 }
